<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_44"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/titlebar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/aliyun_video_call"
            android:textColor="@color/white_alpha_100"
            android:textSize="@dimen/alivc_common_font_16" />

        <ImageView
            android:id="@+id/titlebar_back"
            android:layout_width="@dimen/dimen_44"
            android:layout_height="@dimen/dimen_44"
            android:layout_centerVertical="true"
            android:padding="@dimen/padding_10"
            android:src="@drawable/icon_back" />

    </RelativeLayout>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_78"
        android:src="@drawable/alivc_video_pic_net_error" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_7"
        android:text="@string/aliyun_net_connect_error"
        android:textColor="@color/white_alpha_100"
        android:textSize="@dimen/alivc_common_font_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/aliyun_net_connect_error_tips"
        android:textColor="@color/color_gray_net_error_tips"
        android:textSize="@dimen/alivc_common_font_12" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="@dimen/dimen_180"
        android:layout_height="@dimen/dimen_44"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/alivc_btn_bg_selector"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_30"
        android:text="@string/aliyun_retry"
        android:textColor="@android:color/white"
        android:textSize="@dimen/alivc_common_font_16" />


</LinearLayout>